Fix navbar gap.

--- a/resources/assets/less/prompt.less
+++ b/resources/assets/less/prompt.less
@@ -437,6 +437,7 @@ a {
 
       .dropdown-menu {
         width: 240px;
+        margin-top: 2px;
         padding: 14px;
         border-radius: @border-radius-base;
 
